cmake_minimum_required(VERSION 3.13)
project(leetcode CXX)

#set(CMAKE_C_COMPILER "/usr/local/bin/gcc-8")
#set(CMAKE_CXX_COMPILER "/usr/local/bin/g++-8")
#set(CMAKE_CXX_FLAGS "-fsanitize=address")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
include_directories(".")

add_executable(p1 p1.cpp)
add_executable(p2 p2.cpp)
add_executable(p3 p3.cpp)
add_executable(p4 p4.cpp)
add_executable(p5 p5.cpp)
add_executable(p53 p53.cpp)
add_executable(p94 p94.cpp)
add_executable(p10 p10.cpp)
add_executable(p101 p101.cpp base/util.h base/util.cpp)
add_executable(p102 p102.cpp base/util.h base/util.cpp)
add_executable(p104 p104.cpp base/util.h base/util.cpp)
add_executable(p121 p121.cpp)
add_executable(p136 p136.cpp)
add_executable(p141 p141.cpp base/util.h base/util.cpp)
add_executable(p142 p142.cpp base/util.h base/util.cpp)
add_executable(p144 p144.cpp)
add_executable(p145 p145.cpp)
add_executable(p155 p155.cpp)
add_executable(p160 p160.cpp base/util.h base/util.cpp)
add_executable(p169 p169.cpp)
add_executable(p198 p198.cpp)
add_executable(p20 p20.cpp)
add_executable(p22 p22.cpp base/util.h base/util.cpp)
add_executable(p202 p202.cpp)
add_executable(p206 p206.cpp base/util.h base/util.cpp)
add_executable(p21 p21.cpp base/util.h base/util.cpp)
add_executable(p226 p226.cpp base/util.h base/util.cpp)
add_executable(p230 p230.cpp base/util.h base/util.cpp)
add_executable(p234 p234.cpp base/util.h base/util.cpp)
add_executable(p283 p283.cpp base/util.h base/util.cpp)
add_executable(p32 p32.cpp)
add_executable(p338 p338.cpp base/util.h base/util.cpp)
add_executable(p344 p344.cpp base/util.h)
add_executable(p347 p347.cpp base/util.h base/util.cpp)
add_executable(p406 p406.cpp base/util.h base/util.cpp)
add_executable(p412 p412.cpp base/util.h base/util.cpp)
add_executable(p429 p429.cpp)
add_executable(p437 p437.cpp base/util.h base/util.cpp)
add_executable(p44 p44.cpp)
add_executable(p46 p46.cpp base/util.h base/util.cpp)
add_executable(p448 p448.cpp base/util.h base/util.cpp)
add_executable(p461 p461.cpp)
add_executable(p463 p463.cpp)
add_executable(p476 p476.cpp)
add_executable(p496 p496.cpp base/util.h base/util.cpp)
add_executable(p500 p500.cpp base/util.h)
add_executable(p509 p509.cpp)
add_executable(p543 p543.cpp base/util.h base/util.cpp)
add_executable(p557 p557.cpp base/util.h)
add_executable(p559 p559.cpp)
add_executable(p561 p561.cpp)
add_executable(p566 p566.cpp base/util.h base/util.cpp)
add_executable(p575 p575.cpp)
add_executable(p589 p589.cpp)
add_executable(p590 p590.cpp)
add_executable(p617 p617.cpp)
add_executable(p657 p657.cpp)
add_executable(p669 p669.cpp base/util.h base/util.cpp)
add_executable(p682 p682.cpp base/util.h)
add_executable(p693 p693.cpp base/util.h base/util.cpp)
add_executable(p70 p70.cpp)
add_executable(p78 p78.cpp base/util.h base/util.cpp)
add_executable(p700 p700.cpp)
add_executable(p704 p704.cpp)
add_executable(p709 p709.cpp)
add_executable(p728 p728.cpp)
add_executable(p739 p739.cpp base/util.h base/util.cpp)
add_executable(p763 p763.cpp base/util.h)
add_executable(p766 p766.cpp base/util.h)
add_executable(p771 p771.cpp)
add_executable(p804 p804.cpp)
add_executable(p806 p806.cpp base/util.h)
add_executable(p811 p811.cpp base/util.h)
add_executable(p821 p821.cpp base/util.h)
add_executable(p832 p832.cpp)
add_executable(p844 p844.cpp)
add_executable(p852 p852.cpp)
add_executable(p867 p867.cpp base/util.h)
add_executable(p868 p868.cpp base/util.h)
add_executable(p872 p872.cpp base/util.h)
add_executable(p876 p876.cpp base/util.h)
add_executable(p883 p883.cpp)
add_executable(p884 p884.cpp base/util.h)
add_executable(p893 p893.cpp base/util.h)
add_executable(p897 p897.cpp base/util.h)
add_executable(p905 p905.cpp)
add_executable(p908 p908.cpp)
add_executable(p922 p922.cpp)
add_executable(p929 p929.cpp)
add_executable(p933 p933.cpp)
add_executable(p937 p937.cpp base/util.h base/util.cpp)
add_executable(p942 p942.cpp)
add_executable(p944 p944.cpp)
add_executable(p961 p961.cpp)
add_executable(p965 p965.cpp)
add_executable(p973 p973.cpp)
add_executable(p977 p977.cpp)
add_executable(p985 p985.cpp)
add_executable(p999 p999.cpp base/util.h)
add_executable(p1002 p1002.cpp base/util.h)
