cmake_minimum_required(VERSION 3.18)
project(leetcode CXX)

#set(CMAKE_C_COMPILER "/usr/local/bin/gcc-9")
#set(CMAKE_CXX_COMPILER "/usr/local/bin/g++-9")
#set(CMAKE_CXX_FLAGS "-fsanitize=address")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
include_directories(".")

add_executable(p1 p1_two_sum.cpp)
add_executable(p2 p2_add_two_numbers.cpp)
add_executable(p3 p3_longest_substring_without_repeating_characters.cpp)
add_executable(p4 p4_median_of_two_sorted_arrays.cpp)
add_executable(p5 p5_longest_palindromic_substring.cpp)
add_executable(p10 p10_regular_expression_matching.cpp)
add_executable(p11 p11_container_with_most_water.cpp)
add_executable(p20 p20_valid_parentheses.cpp)
add_executable(p21 p21_merge_two_sorted_lists.cpp base/util.h base/util.cpp)
add_executable(p22 p22_generate_parentheses.cpp base/util.h base/util.cpp)
add_executable(p32 p32_longest_valid_parentheses.cpp)
add_executable(p39 p39_combination_sum.cpp base/util.h base/util.cpp)
add_executable(p44 p44_wildcard_matching.cpp)
add_executable(p46 p46_permutations.cpp base/util.h base/util.cpp)
add_executable(p48 p48_rotate_image.cpp base/util.h base/util.cpp)
add_executable(p49 p49_group_anagrams.cpp base/util.h base/util.cpp)
add_executable(p53 p53_maximum_subarray.cpp)
add_executable(p62 p62_unique_paths.cpp base/util.h base/util.cpp)
add_executable(p64 p64_minimum_path_sum.cpp base/util.h base/util.cpp)
add_executable(p70 p70_climbing_stairs.cpp)
add_executable(p78 p78_subsets.cpp base/util.h base/util.cpp)
add_executable(p94 p94_binary_tree_inorder_traversal.cpp)
add_executable(p96 p96_unique_binary_search_trees.cpp base/util.h base/util.cpp)
add_executable(p101 p101_symmetric_tree.cpp base/util.h base/util.cpp)
add_executable(p102 p102_binary_tree_level_order_traversal.cpp base/util.h base/util.cpp)
add_executable(p104 p104_maximum_depth_of_binary_tree.cpp base/util.h base/util.cpp)
add_executable(p121 p121_best_time_to_buy_and_sell_stock.cpp)
add_executable(p136 p136_single_number.cpp)
add_executable(p141 p141_linked_list_cycle.cpp base/util.h base/util.cpp)
add_executable(p142 p142_linked_list_cycle_2.cpp base/util.h base/util.cpp)
add_executable(p144 p144_binary_tree_preorder_traversal.cpp)
add_executable(p145 p145_binary_tree_postorder_traversal.cpp)
add_executable(p155 p155_min_stack.cpp)
add_executable(p160 p160_intersection_of_two_linked_list.cpp base/util.h base/util.cpp)
add_executable(p169 p169_majority_element.cpp)
add_executable(p198 p198_house_robber.cpp)
add_executable(p199 p199_binary_tree_right_side_view.cpp base/util.h base/util.cpp)
add_executable(p202 p202_happy_number.cpp)
add_executable(p206 p206_reverse_linked_list.cpp base/util.h base/util.cpp)
add_executable(p215 p215_kth_largest_element_in_an_array.cpp base/util.h base/util.cpp)
add_executable(p226 p226_invert_binary_tree.cpp base/util.h base/util.cpp)
add_executable(p230 p230_kth_smallest_element_in_a_BST.cpp base/util.h base/util.cpp)
add_executable(p234 p234_palindrome_linked_list.cpp base/util.h base/util.cpp)
add_executable(p238 p238_product_of_array_except_self.cpp base/util.h base/util.cpp)
add_executable(p283 p283_move_zeroes.cpp base/util.h base/util.cpp)
add_executable(p287 p287_find_the_duplicate_number.cpp base/util.h base/util.cpp)
add_executable(p338 p338_counting_bits.cpp base/util.h base/util.cpp)
add_executable(p344 p344_reverse_string.cpp base/util.h)
add_executable(p347 p347_top_k_frequent_elements.cpp base/util.h base/util.cpp)
add_executable(p406 p406_queue_reconstruction_by_height.cpp base/util.h base/util.cpp)
add_executable(p412 p412_fizz_buzz.cpp base/util.h base/util.cpp)
add_executable(p429 p429_n-ary_tree_level_order_traversal.cpp)
add_executable(p437 p437_path_sum_3.cpp base/util.h base/util.cpp)
add_executable(p448 p448_find_all_numbers_disappeared_in_an_array.cpp base/util.h base/util.cpp)
add_executable(p461 p461_hamming_distance.cpp)
add_executable(p463 p463_island_perimeter.cpp)
add_executable(p476 p476_number_complement.cpp)
add_executable(p496 p496_next_greater_element_1.cpp base/util.h base/util.cpp)
add_executable(p500 p500_keyboard_row.cpp base/util.h)
add_executable(p509 p509.cpp)
add_executable(p543 p543.cpp base/util.h base/util.cpp)
add_executable(p557 p557.cpp base/util.h)
add_executable(p559 p559.cpp)
add_executable(p561 p561.cpp)
add_executable(p566 p566.cpp base/util.h base/util.cpp)
add_executable(p575 p575.cpp)
add_executable(p589 p589.cpp)
add_executable(p590 p590.cpp)
add_executable(p617 p617.cpp)
add_executable(p647 p647.cpp base/util.h base/util.cpp)
add_executable(p657 p657.cpp)
add_executable(p669 p669.cpp base/util.h base/util.cpp)
add_executable(p682 p682.cpp base/util.h)
add_executable(p693 p693.cpp base/util.h base/util.cpp)
add_executable(p700 p700.cpp)
add_executable(p704 p704.cpp)
add_executable(p709 p709.cpp)
add_executable(p728 p728.cpp)
add_executable(p739 p739.cpp base/util.h base/util.cpp)
add_executable(p763 p763.cpp base/util.h)
add_executable(p766 p766.cpp base/util.h)
add_executable(p771 p771.cpp)
add_executable(p804 p804.cpp)
add_executable(p806 p806.cpp base/util.h)
add_executable(p811 p811.cpp base/util.h)
add_executable(p821 p821.cpp base/util.h)
add_executable(p832 p832.cpp)
add_executable(p844 p844.cpp)
add_executable(p852 p852.cpp)
add_executable(p867 p867.cpp base/util.h)
add_executable(p868 p868.cpp base/util.h)
add_executable(p872 p872.cpp base/util.h)
add_executable(p876 p876.cpp base/util.h)
add_executable(p883 p883.cpp)
add_executable(p884 p884.cpp base/util.h)
add_executable(p893 p893.cpp base/util.h)
add_executable(p897 p897.cpp base/util.h)
add_executable(p905 p905.cpp)
add_executable(p908 p908.cpp)
add_executable(p922 p922.cpp)
add_executable(p929 p929.cpp)
add_executable(p933 p933.cpp)
add_executable(p937 p937.cpp base/util.h base/util.cpp)
add_executable(p942 p942.cpp)
add_executable(p944 p944.cpp)
add_executable(p961 p961.cpp)
add_executable(p965 p965.cpp)
add_executable(p973 p973.cpp)
add_executable(p977 p977.cpp)
add_executable(p985 p985.cpp)
add_executable(p999 p999.cpp base/util.h)
add_executable(p1002 p1002.cpp base/util.h)
